force-app/main/default/objects/Business_Plan_Settings__c/Business_Plan_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Business Plan Settings</label>
</CustomObject>