force-app/main/default/objects/Business_Plan_Settings__c/fields/BD_Y_Days__c.field-meta.xml
<CustomField>
    <fullName>BD_Y_Days__c</fullName>
    <label>BD Y Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>