force-app/main/default/objects/Business_Plan_Settings__c/fields/National_Average__c.field-meta.xml
<CustomField>
    <fullName>National_Average__c</fullName>
    <label>National Average</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>