force-app/main/default/objects/Business_Plan_Settings__c/fields/Pricing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Impact__c</fullName>
    <label>YTD Pricing Impact</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>