force-app/main/default/objects/Business_Plan_Settings__c/fields/YTD_Vol_Mix_Impact__c.field-meta.xml
<CustomField>
    <fullName>YTD_Vol_Mix_Impact__c</fullName>
    <label>YTD Vol/Mix Impact</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>