force-app/main/default/objects/Business_Plan_Settings__c/listViews/Business_Plan_Settings.listView-meta.xml
<ListView>
    <fullName>Business_Plan_Settings</fullName>
    <columns>NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>National_Average__c</columns>
    <columns>Pricing_Impact__c</columns>
    <columns>YTD_Vol_Mix_Impact__c</columns>
    <columns>BD_Y_1_Days__c</columns>
    <columns>BD_Y_Days__c</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Business Plan Settings</label>
    <language>en_US</language>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>